# hospital-resource-usage-anomolies

./: .gitignore  PROJECT_STRUCTURE.md  README.md  pyproject.toml
.github/workflows/: tests.yml
case_studies/: __init__.py
case_studies/hospital_anomalies/: README.md  cli.py
case_studies/hospital_anomalies/config/: default.yaml
case_studies/hospital_anomalies/notebooks/: 01_ingest_and_qc.ipynb  02_baseline_model.ipynb  03_autoencoder.ipynb
case_studies/hospital_anomalies/reports/results/: qc_report.json
case_studies/hospital_anomalies/src/: __init__.py  evaluation.py  features.py  ingest.py  io.py  pipeline.py  qc.py  utils.py  visualize.py
case_studies/hospital_anomalies/src/models/: __init__.py  autoencoder.py  isolation_forest.py
case_studies/hospital_anomalies/tests/: test_anomaly_table.py  test_features.py  test_ingest_smoke.py  test_isolation_forest.py  test_qc.py
docs/case_studies/: hospital_anomalies.md
scripts/: create_hospital_anomalies_issues.sh  export_report_assets.sh  run_case_study_hospital_anomalies.sh
src/publicdata_ca/: __init__.py
src/publicdata_ca/acquisition/: __init__.py  fetch.py  registry.py  storage.py  transforms.py  validate.py
src/publicdata_ca/utils/: __init__.py  config.py  dates.py  logging.py
